# aed1-metodos-ordenacao

./: CMakeLists.txt  bubble_sort.c  bucket_sort.c  bucket_sort.h  counting_sort.c  couting_sort.c  geraRelatorio.c  geradorDeVetor.c  insertion_sort.c  makefile  merge_sort.c  metodos.h  novoGerador.c  quick_sort.c  radix_sort.c  selection_sort.c  test.h  testBucket.c  testMain.c  testMetodos.c  testUtilitarios.c  testes.c  utilitarios.c  utilitarios.h
